# UCSD-Reg-Analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/superpowers/plans/: 2026-06-16-ucsd-enroll-analyzer.md  2026-06-17-dashboard-p1-ingest.md
docs/superpowers/specs/: 2026-06-16-ucsd-enroll-analyzer-design.md  2026-06-17-enrollment-dashboard-website-design.md
src/ucsd_enroll_analyzer/: __init__.py  analysis.py  cli.py  constants.py  fetch.py  ingest.py  load.py  plot.py  render.py  terms.py
tests/: test_analysis.py  test_cli.py  test_fetch.py  test_ingest.py  test_integration.py  test_load.py  test_plot.py  test_render.py  test_terms.py
tests/fixtures/: allzero.csv  normal.csv  spring2022.csv
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/data/: .gitkeep  2025Spring.json  index.json
web/src/: App.tsx  index.css  main.tsx
web/src/components/: Disclaimer.tsx  StalenessBanner.tsx
web/src/lib/: analysis.ts  data.ts  format.ts  raw.ts  types.ts
web/src/pages/: Compare.tsx  CourseDetail.tsx  Dashboard.tsx
web/test/: lib.test.ts
web_build/: terms.txt
