[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ucsd-enroll-analyzer"
version = "0.1.0"
description = "Analyze historical UCSD course enrollment data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]

[project.scripts]
ucsd-enroll-analyzer = "ucsd_enroll_analyzer.cli:main"

[dependency-groups]
dev = ["pytest>=8.0", "mypy>=1.8"]

[tool.hatch.build.targets.wheel]
packages = ["src/ucsd_enroll_analyzer"]

[tool.pytest.ini_options]
markers = ["network: tests that hit live GitHub"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
